# HabitReminder

./: .env.example  .flake8  Dockerfile  README.md  data.json  docker-compose.yml  manage.py  pyproject.toml
habit_reminder/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
habits/: models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_weekdays.py
users/: models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py
